added TabLayout + ViewPager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,68 +1,73 @@
 <resources>
-    <string name="app_name">Кампус КПІ</string>
-    <string name="title_activity_main_not_auth">MainNotAuthActivity</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_logout">Вийти</string>
-    <string name="activity_name_main">Головна</string>
-    <string name="activity_name_bulletin_board">Оголошення</string>
-    <string name="title_activity_bulletin_board">BulletinBoardActivity</string>
+  <string name="app_name">Кампус КПІ</string>
+  <string name="title_activity_main_not_auth">MainNotAuthActivity</string>
+  <string name="action_settings">Settings</string>
+  <string name="action_logout">Вийти</string>
+  <string name="activity_name_main">Головна</string>
+  <string name="activity_name_bulletin_board">Оголошення</string>
+  <string name="title_activity_bulletin_board">BulletinBoardActivity</string>
 
-    <string name="action_search">Пошук</string>
-    <string name="progress_authenticate">Authenticating…</string>
-    <string name="progress_sending">Відправлення…</string>
-    <string name="key_login">login</string>
-    <string name="key_password">password</string>
-    <string name="settings">Settings</string>
-    <string name="menu_edit">Редагувати</string>
-    <string name="logout_confirmation">Ви дійсно бажаєте вийти з облікового запису?</string>
-    <string name="yes">Так</string>
-    <string name="no">Ні</string>
+  <string name="action_search">Пошук</string>
+  <string name="progress_authenticate">Authenticating…</string>
+  <string name="progress_sending">Відправлення…</string>
+  <string name="key_login">login</string>
+  <string name="key_password">password</string>
+  <string name="settings">Settings</string>
+  <string name="menu_edit">Редагувати</string>
+  <string name="logout_confirmation">Ви дійсно бажаєте вийти з облікового запису?</string>
+  <string name="yes">Так</string>
+  <string name="no">Ні</string>
 
-    <string name="profileName">Профіль</string>
-    <string name="subsection">Підрозділ</string>
-    <string name="group">Група</string>
-    <string name="add_bulletin">Додати</string>
-    <string name="edit_bulletin">Редагувати</string>
-    <string name="action_moderator">M</string>
-    <string name="invalid_credentials">Логін або пароль невірні</string>
-    <string name="no_internet">Немає підключення до мережі Інтернет</string>
-    <string name="bulletin_text_content">Текст оголошення</string>
-    <string name="activity_bulletin_moderator_mode_title">Режим модератора</string>
-    <string name="bulletin_author">Автор: \u0020</string>
-    <string name="bulletin_creation_date">Дата створення:\u0020</string>
-    <string name="bulletin_actuality">Актуальність:\u0020</string>
-    <string name="bulletin_date_change_actuality">Дата зміни: \u0020</string>
-    <string name="error_while_data_obtaining">Помилка при отриманні данних</string>
+  <string name="profileName">Профіль</string>
+  <string name="subsection">Підрозділ</string>
+  <string name="group">Група</string>
+  <string name="add_bulletin">Додати</string>
+  <string name="edit_bulletin">Редагувати</string>
+  <string name="action_moderator">M</string>
+  <string name="invalid_credentials">Логін або пароль невірні</string>
+  <string name="no_internet">Немає підключення до мережі Інтернет</string>
+  <string name="bulletin_text_content">Текст оголошення</string>
+  <string name="activity_bulletin_moderator_mode_title">Режим модератора</string>
+  <string name="bulletin_author">Автор: \u0020</string>
+  <string name="bulletin_creation_date">Дата створення:\u0020</string>
+  <string name="bulletin_actuality">Актуальність:\u0020</string>
+  <string name="bulletin_date_change_actuality">Дата зміни: \u0020</string>
+  <string name="error_while_data_obtaining">Помилка при отриманні данних</string>
 
-    <string name="bulletin">Оголошення</string>
-    <string name="monitoring">Моніторінг</string>
-    <string name="rectorial">Ректорський</string>
-    <string name="vote">Голосування</string>
-    <string name="npp">Навантаження НПП</string>
-    <string name="rnp">РНП</string>
-    <string name="spinner_title">Prompt</string>
+  <string name="bulletin">Оголошення</string>
+  <string name="monitoring">Моніторінг</string>
+  <string name="rectorial">Ректорський</string>
+  <string name="vote">Голосування</string>
+  <string name="npp">Навантаження НПП</string>
+  <string name="rnp">РНП</string>
+  <string name="spinner_title">Prompt</string>
 
-    <string name="bulletin_is_added">Оголошення створено</string>
-    <string name="unauthorized">Виконайте авторизацію</string>
-    <string name="server_error">Помилка сервера</string>
-    <string name="bad_bulletin">Невірний формат оголошення або одержувача</string>
-    <string name="clear">Очищено</string>
-    <string name="bulletin_is_modified">Зміни виконані</string>
-    <string name="empty_bulletins_list">Немає оголошень</string>
-    <string name="recipient_already_exists">Такий одержувач вже існує</string>
-    <string name="wrong_recipient">Невірний формат одержувача</string>
-    <string name="login_is_required">Логін є обов\'язковим</string>
-    <string name="password_is_required">Пароль є обов\'язковим</string>
-    <string name="recipient_must_be_added">Додайте одержувача</string>
-    <string name="required_field">Обов\'язкове поле!</string>
-    <string name="activity_name_voting">Голосування</string>
+  <string name="bulletin_is_added">Оголошення створено</string>
+  <string name="unauthorized">Виконайте авторизацію</string>
+  <string name="server_error">Помилка сервера</string>
+  <string name="bad_bulletin">Невірний формат оголошення або одержувача</string>
+  <string name="clear">Очищено</string>
+  <string name="bulletin_is_modified">Зміни виконані</string>
+  <string name="empty_bulletins_list">Немає оголошень</string>
+  <string name="recipient_already_exists">Такий одержувач вже існує</string>
+  <string name="wrong_recipient">Невірний формат одержувача</string>
+  <string name="login_is_required">Логін є обов\'язковим</string>
+  <string name="password_is_required">Пароль є обов\'язковим</string>
+  <string name="recipient_must_be_added">Додайте одержувача</string>
+  <string name="required_field">Обов\'язкове поле!</string>
+  <string name="activity_name_voting">Голосування</string>
 
-    <string name="criterionCompetence">Компетентність в дисципліні, яку викладає</string>
-    <string name="criterionExactingness">Вимогливість викладача</string>
-    <string name="criterionTeaching">Вміння донести матеріал до студентів</string>
-    <string name="criterionRelationship">Вміння налагодити партнерські стосунки зі студентами</string>
-    <string name="criterionTact">Загальна культура та тактовність по відношенню до студентів</string>
-    <string name="criterionModernity">Використання засобів дистанційного спілкування (електронна пошта, Skype, соц.мережі)</string>
-    <string name="activity_name_rate_teacher">Оцінка</string>
-    <string name="rate_by_all_criteria">Будь-ласка, оцініть за всіма критеріями</string>
+  <string name="criterionCompetence">Компетентність в дисципліні, яку викладає</string>
+  <string name="criterionExactingness">Вимогливість викладача</string>
+  <string name="criterionTeaching">Вміння донести матеріал до студентів</string>
+  <string name="criterionRelationship">Вміння налагодити партнерські стосунки зі студентами</string>
+  <string name="criterionTact">Загальна культура та тактовність по відношенню до студентів</string>
+  <string name="criterionModernity">Використання засобів дистанційного спілкування (електронна пошта, Skype, соц.мережі)</string>
+  <string name="activity_name_rate_teacher">Оцінка</string>
+  <string name="rate_by_all_criteria">Будь-ласка, оцініть за всіма критеріями</string>
+
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
+  <string name="category_current">Поточне</string>
+  <string name="category_archive">Архiв</string>
 </resources>
